finish login with credentials update UI components

--- a/.env
+++ b/.env
@@ -3,3 +3,7 @@
 
 
 MONGO_URL="mongodb+srv://food-ordering:Nt8zPmNf4fKsGDbD@cluster0.kfkmvmm.mongodb.net/food-ordering"
+
+
+NEXTAUTH_URL="http://localhost:3000"
+SECRET="Nt8zPmNf4fKsGDbD"
