--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "20.11.20",
     "@types/react": "18.2.60",
     "autoprefixer": "^10.0.1",
